# variant-filtration-tool

./: .cruft.json  .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .travis.cwl  .travis.yml  Dockerfile  Makefile  README.md  build-gdc-docker.sh  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
gdc_filtration_tools/: __init__.py  __main__.py  logger.py  readvcf.py  utils.py
gdc_filtration_tools/tools/: add_oxog_filters.py  create_dtoxog_maf.py  create_oxog_intervals.py  dtoxog_maf_to_vcf.py  extract_oxoq.py  filter_contigs.py  filter_nonstandard_variants.py  filter_pos_dkfz.py  filter_somatic_score.py  format_gdc_vcf.py  format_pindel_vcf.py  format_sanger_pindel_vcf.py  format_strelka_vcf.py  format_svaba_vcf.py  reheader_svaba_vcf.py
tests/: test_add_oxog_filters.py  test_create_dtoxog_maf.py  test_create_oxog_intervals.py  test_dtoxog_maf_to_vcf.py  test_extract_oxoq.py  test_filter_contigs.py  test_filter_nonstandard_variants.py  test_filter_pos_dkfz.py  test_filter_somatic_score.py  test_format_gdc_vcf.py  test_format_pindel_vcf.py  test_format_sanger_pindel_vcf.py  test_format_strelka_vcf.py  test_readvcf.py  test_utils.py  utils.py
tests/data/: filter_contigs.vcf  pindel_test.vcf  sanger_pindel_test.vcf  test.vcf  test_dfkz.vcf  test_input_for_add_oxog_filters.vcf  test_input_for_add_oxog_filters_from_maf.vcf.gz.tbi  test_input_for_dtoxog.vcf  test_nonstandard_variants.vcf  test_oxog_annotated.maf  test_oxog_metrics.txt  test_oxog_ref.fa  test_oxog_ref.fa.fai  test_somatic_score.vcf
tests/unit/: test_main.py
util/: FormatVcfHeaderForGDC.py
utils/: ExtractOxoqFromSqlite.py  FilterContigs.py  FormatVcfHeaderForGDC.py  PindelVcfFormatter.py  PosFilterForDkfz.py  SomaticScoreFilter.py
variant-filtration-tool/: main.py
variant-filtration-tool/filters/: somaticscore.py
variant-filtration-tool/metrics/: base_metrics.py  fpfilter.py  mixins.py  somaticscorefilter.py
