[metadata]
name = gdc_filtration_tools
description = Filtration tools
url = https://github.com/NCI-GDC/variant-filtration-tool
author = Charles Czysz
author_email = czysz@uchicago.edu
python_requires = >=3.6
license_files =
	LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    pysam
    defopt

zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
	gdc_filtration_tools = gdc_filtration_tools.__main__:main
